Tue  Jun  2 07:21:50 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/Notify/Bug_3646d_Regression/*:
          Another test that loads and unload the notify service, this one
          also loads the naming service and uses one run thread

        * orbsvcs/orbsvcs/Naming/Hash_Naming_Context.cpp:
          Const change

Tue  Jun  2 06:50:50 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Added Bug 3683

Tue  Jun  2 06:47:43 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/Options.html:
          When we use ClientConnectionHandler RW we don't use the LF
          loop. In case the buffers are full, we use the flushing
          strategy for which the default is leader follower, but that
          will not work because we don't use the lf loop in this case.
          Added a note the ClientConnectionHandler RW needs a
          FlusingStrategy of blocking

        * tests/Bug_3683_Regression/Echo_Client_i.cpp
        * tests/Bug_3683_Regression/Echo_Client_i.h
        * tests/Bug_3683_Regression/run_test.pl
        * tests/Bug_3683_Regression/Simple_util.cpp
          Use a commandline argument -p to indicate the size of the
          string in megabytes.

        * tests/Bug_3683_Regression/svc.conf
          Set the FlushingStrategy to blocking

        * tao/Transport.cpp:
          Small layout to debug message

        * tao/PortableServer/Root_POA.cpp:
        * tao/LocateRequest_Invocation_Adapter.cpp
          Layout change

Fri May 29 12:47:43 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Transport.cpp (schedule_output):
          Log an error when the reactor is zero

Fri May 29 11:27:43 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/ZIOP/TestCompressor/TAO_TestCompressor.rc:
          Fixed for WinCE GCC

Fri May 29 10:29:43 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3683_Regression/*: