@@ -124,7 +124,7 @@ private:
  * Class used to remove the circular dependencies between the
  * Attribute classes and the Trader class.
  */
-#if defined (__BORLANDC__) && (__BORLANDC__ <= 0x610)
+#if defined (__BORLANDC__) && (__BORLANDC__ < 0x620)
 // Work around Borland unresolved symbol errors concerning the
 // out-of-line virtual destructor.  The virtual destructor should
 // not be inlined, nor should we have to export TAO_Lockable from the
@@ -132,7 +132,7 @@ private:
 class TAO_Trading_Serv_Export TAO_Lockable
 #else
 class TAO_Lockable
-#endif  /* __BORLANDC__ <= 0x610 */
+#endif  /* __BORLANDC__ < 0x620 */
 {
 public:
   virtual ~TAO_Lockable (void);
