@@ -1,3 +1,9 @@
+Tue  Jun  2 13:14:50 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * orbsvcs/orbsvcs/IFRService/IFR_Service_Utils_T.cpp
+        * orbsvcs/orbsvcs/Trader/Trader.h
+          Fixed problems with CB2009 Update 3
+
 Tue  Jun  2 07:21:50 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * orbsvcs/tests/Notify/Bug_3646d_Regression/*:
